tests/ui/attributes/optimize.stderr
error: attribute should be applied to function or closure
  --> $DIR/optimize.rs:6:1
   |
LL | #[optimize(speed)]
   | ^^^^^^^^^^^^^^^^^^
LL | struct F;
   | --------- not a function or closure

error: attribute should be applied to function or closure
  --> $DIR/optimize.rs:10:5
   |
LL |       #[optimize(speed)]
   |       ^^^^^^^^^^^^^^^^^^
LL | /     {
LL | |         1
LL | |     };
   | |_____- not a function or closure

error: aborting due to 2 previous errors

